--- a/src/style/filmList.scss
+++ b/src/style/filmList.scss
@@ -9,6 +9,8 @@ h1{
     gap: 15px;
     justify-content: center;
     flex-wrap: nowrap;
+    width: 100%;
+    overflow: auto;
 
 
 
@@ -29,8 +31,12 @@ h1{
          cursor: pointer;
      }
 
-     &:hover img{
-         display: none;
+     &:hover{
+         .img-container{
+             img{
+                 display: none;
+             }
+         }
      }
 
      &:hover .film-data{
@@ -65,8 +71,13 @@ h1{
 
               .flag-container{
               display: inline-block;
-              background-color: white;
-              height: 10px;
+              height: 15px;
+              margin-left: 5px;
+
+              img{
+                  width: 100%;
+                  height: 100%;
+              }
              
              
          }
