--- a/src/style/serie.scss
+++ b/src/style/serie.scss
@@ -8,6 +8,8 @@
     gap: 15px;
     justify-content: center;
     flex-wrap: nowrap;
+    overflow: auto;
+    width: 100%;
 
 
      .card{
@@ -27,8 +29,12 @@
          cursor: pointer;
      }
 
-     &:hover img{
-         display: none;
+     &:hover{
+         .img-container{
+             img{
+                 display: none;
+             }
+         }
      }
 
      &:hover .film-data{
@@ -61,10 +67,16 @@
              margin: 5px 0;
              word-break: break-word;
 
+
               .flag-container{
-              display: inline-block;
-              background-color: white;
-              height: 10px;
+                display: inline-block;
+                height: 15px;
+                margin-left: 5px;
+  
+                img{
+                    width: 100%;
+                    height: 100%;
+                }
              
              
          }
