--- a/src/style/filmList.scss
+++ b/src/style/filmList.scss
@@ -1,3 +1,9 @@
+.film-container{
+    
+    margin-bottom: 50px;
+    padding: 15px;
+
+
 h1{
     text-align: center;
     margin: 50px 0;
@@ -7,24 +13,25 @@ h1{
 .row{
     
     gap: 15px;
-    justify-content: center;
     flex-wrap: nowrap;
     width: 100%;
-    overflow: auto;
+    overflow-x: auto;
 
 
 
      .card{
      background-color: black;
-     width: calc((100% / 5) - 15px);
+     width: 250px;
      height: 350px;
      color: white;
-     padding: 15px;
+     padding-left: 0;
+     padding-right: 0;
      display: flex;
      flex-direction: column;
      align-items: center;
      word-break: break-word;
      position: relative;
+     overflow: auto;
      
 
      &:hover{
@@ -39,8 +46,10 @@ h1{
          }
      }
 
-     &:hover .film-data{
-         display: block;
+     &:hover{
+         .film-data{
+             display: block;
+         }
      }
 
      .img-container{
@@ -55,37 +64,42 @@ h1{
 
      .film-data{
          width: 100%;
-         height: 100%;
+         height: auto;
          position: absolute;
          top: 0;
          display: none;
          font-size: 11px;
          padding: 15px;
-
         
-         
 
-         div{
-             margin: 5px 0;
-             word-break: break-word;
+        div{
+            margin: 3px 0;
 
-              .flag-container{
-              display: inline-block;
-              height: 15px;
-              margin-left: 5px;
+            span{
+                font-weight: bold;
+                font-size: 13px;
+                margin-right: 5px;
+            }
 
-              img{
-                  width: 100%;
-                  height: 100%;
-              }
-             
-             
-         }
-             span{
-                 font-weight: bold;
-                 font-size: 12px;
+            .flag-container{
+                display: inline-block;
+                height: 15px;
+                margin-left: 5px;
+    
+                  img{
+                      width: 100%;
+                      height: 100%;
+                  }
+                 
+                 
              }
-         }
+        } 
+            
+
+   
+             
+         
      }
  }
+}
 }
