--- a/src/style/serie.scss
+++ b/src/style/serie.scss
@@ -1,3 +1,7 @@
+.serie-container{
+    margin-bottom: 50px;
+    padding: 15px;
+  
 
     h1{
         text-align: center;
@@ -6,7 +10,6 @@
 
 .row{
     gap: 15px;
-    justify-content: center;
     flex-wrap: nowrap;
     overflow: auto;
     width: 100%;
@@ -14,15 +17,17 @@
 
      .card{
      background-color: black;
-     width: calc((100% / 5) - 15px);
+     width: 250px;
      height: 350px;
      color: white;
-     padding: 15px;
+     padding-left: 0;
+     padding-right: 0;
      display: flex;
      flex-direction: column;
      align-items: center;
      word-break: break-word;
      position: relative;
+     overflow: auto;
      
 
      &:hover{
@@ -64,7 +69,7 @@
          
 
          div{
-             margin: 5px 0;
+             margin: 3px 0;
              word-break: break-word;
 
 
@@ -87,4 +92,5 @@
          }
      }
  }
+}
 }
